src/test/resources/rules/success/LineLengthCheck.java
package rules.success;

public class LineLengthCheck {
    public void method() {
        String normalString = "This string is within the 120 character limit";
        normalString.isEmpty();
    }
}